# elfkit

./: .travis.yml  Cargo.toml  LICENSE  NOTES.md  README.md
bolter/: args.rs  ld.rs  main.rs  relocations.rs
examples/: astrip.rs  ld.rs  readelf.rs  strip.rs
src/: dynamic.rs  elf.rs  error.rs  filetype.rs  header.rs  lib.rs  linker.rs  loader.rs  read_macros.rs  relocation.rs  section.rs  segment.rs  strtab.rs  symbol.rs  symbolic_linker.rs  types.rs  utils.rs
tests/: layout.rs  ld.rs  simple.rs
tests/ld/: test.sh
tests/linker/: Makefile  common.makefile
tests/linker/asm-2-X86_64_PC32/: main.asm
tests/linker/asm-4-X86_64_PLT32/: main.asm
tests/linker/asm-9-X86_64_GOTPCREL/: main.asm
tests/linker/asm-common/: init_common.asm  main.asm
tests/linker/asm-reloc-0-none/: Makefile
tests/linker/asm-reloc-1-X86_64_64/: data.asm
tests/linker/asm-sec/: garbage.asm  main.asm
tests/linker/c-19-X86_64_TLSGD/: 0-crt1.lo
tests/linker/c-20-X86_64_TLSLD/: 10-main.c  Makefile
tests/linker/c-22-X86_64_GOTTPOFF/: 10-main.c
tests/linker/c-common/: .10-main.c.swp  .12-data.c.swp  10-main.c  12-data.c  mdata.c
tests/linker/c-explode/: _Exit.lo  __environ.lo  __errno_location.lo  __fpclassifyl.lo  __init_tls.lo  __lctrans.lo  __libc_start_main.lo  __lock.lo  __lockfile.lo  __set_thread_area.lo  __signbitl.lo  __stack_chk_fail.lo  __stdio_close.lo  __stdio_exit.lo  __stdio_seek.lo  __stdio_write.lo  __stdout_write.lo  __towrite.lo  __wait.lo  exit.lo  frexpl.lo  fwrite.lo  libc.lo  memchr.lo  memcpy.lo  memset.lo  ofl.lo  printf.lo  stdout.lo  strerror.lo  strnlen.lo  syscall_ret.lo  uname.lo  vfprintf.lo  wcrtomb.lo  wctomb.lo
tests/linker/c-init-array/: 10-main.c
tests/linker/c-tls/: 10-main.c
tests/linker/libc-hello/: 10-main.c
tests/linker/no-undef-reloc/: main.c
tests/linker/reloc-09-X86_64_GOTPCREL/: main.asm
tests/linker/reloc-19-X86_64_TLSGD/: 10-main.c
tests/linker/reloc-20-X86_64_TLSLD/: Makefile
tests/linker/reloc-21-R_X86_64_DTPOFF32/: 10-main.c  Makefile
tests/linker/reloc-22-X86_64_GOTTPOFF/: Makefile
tests/samples/: Makefile  amd64_exe  amd64_exe_asm  amd64_exe_asm_pie  dx_main.asm  main.asm  main.c  main_c.c  plt_main.asm  px_hello.asm  simple.asm
