[package]
name = "elfkit"
version = "0.0.3"
authors = ["Arvid E. Picciani <aep@exys.org>"]
repository = "https://github.com/aep/elfkit"
homepage   = "https://github.com/aep/elfkit"
documentation = "https://docs.rs/elfkit"
readme = "README.md"
license = "MIT/Apache-2.0"
description = """
an elf parser and manipulation library in pure rust
"""

[dependencies]
byteorder = "1"
enum-primitive-derive = "0.1"
num-traits = "^0.1"
bitflags = "1.0.0"
itertools = "0.6"

## bin dependencies
colored = "1"
goblin = "0.0.11"
tempfile = "2.2.0"
sha2 = "0.6"


[[bin]]
name="bolter"
path="bolter/main.rs"
