[package]
name = "elfkit"
version = "0.0.4"
authors = ["Arvid E. Picciani <aep@exys.org>"]
repository = "https://github.com/aep/elfkit"
homepage   = "https://github.com/aep/elfkit"
documentation = "https://docs.rs/elfkit"
readme = "README.md"
license = "MIT/Apache-2.0"
description = """
an elf parser and manipulation library in pure rust
"""

[dependencies]
byteorder = "1"
enum-primitive-derive = "0.1"
num-traits = "^0.1"
bitflags = "1.0.0"
itertools = "0.6"
rayon = "0.8.2"
bit-vec = "0.4.4"
bloom = "0.3.2"
fnv = "1.0.5"
ordermap = "0.3.0"
log = "0.4"
env_logger = {git = "https://github.com/sebasmagri/env_logger.git"}
pretty_env_logger = "0.1.1"
clap = "2.28.0"
glob = "0.2.11"

#ar = "0.3.1"
ar = {git = "https://github.com/mdsteele/rust-ar.git"}


## bin dependencies
colored = "1"
tempfile = "2.2.0"
sha2 = "0.6"


[[bin]]
name="readelf"
path="bin/readelf.rs"

[[bin]]
name="linktree"
path="bin/linktree.rs"

[[bin]]
name="ld"
path="bin/ld.rs"

[[bin]]
name="ldd"
path="bin/ldd.rs"
