[package]
name = "elfkit"
version = "0.0.6"
authors = ["Arvid E. Picciani <aep@exys.org>"]
repository = "https://github.com/aep/elfkit"
homepage   = "https://github.com/aep/elfkit"
documentation = "https://docs.rs/elfkit"
readme = "README.md"
license = "MIT/Apache-2.0"
description = """
an elf parser and manipulation library in pure rust
"""

[dependencies]
byteorder = "1"
enum-primitive-derive = "0.1"
num-traits = "0.2.5"
bitflags = "1.0.0"
itertools = "0.7.8"
rayon = "1.0.1"
bit-vec = "0.5.0"
bloom = "0.3.2"
fnv = "1.0.5"
indexmap = "1.0.1"
log = "0.4"
env_logger = "0.5.10"
pretty_env_logger = "0.2.3"
clap = "2.28.0"
glob = "0.2.11"
ar = "0.6.0"


## bin dependencies
colored = "1"
tempfile = "3.0.2"
sha2 = "0.7.1"


[[bin]]
name="readelf"
path="bin/readelf.rs"

[[bin]]
name="linktree"
path="bin/linktree.rs"

[[bin]]
name="ld"
path="bin/ld.rs"

[[bin]]
name="ldd"
path="bin/ldd.rs"
